fix: 리뷰어 조회 내역 버그 픽스